Fixed Edgecase on Mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -992,6 +992,12 @@ html, html a {
     d: path("M90.36 49.443c-1.645-.475-2.853-2.488-2.557-4.795.423-1.852 2.212-3.21 4.263-2.878 1.645.476 2.853 2.489 2.557 4.796-.422 1.851-2.211 3.21-4.262 2.877zM55.301 45.054c-1.865.28-3.678-1.181-4.049-3.264-.37-2.083.842-3.998 2.707-4.278 1.866-.28 3.678 1.181 4.049 3.264.37 2.083-.841 3.998-2.707 4.278z");
   }
 }
+@media screen and (max-width: 767px) {
+  .slido {
+    display: none;
+  }
+}
+
 .browser {
   border-radius: 4px;
   background-color: #ffffff;
